# seat-arrangement

./: .gitignore  Makefile  README.md  seat-arrangement.cabal
docs/: Aggregate-Assignment.html  Aggregate-Proposal.html  Aggregate-Reservation.html  Aggregate-Seat.html  Aggregate-SeatArrangement.html  Constraint.html  Extension-Data.html  Extension-Refined.html  doc-index.html  index.html  seat-arrangement.haddock
src/: Constraint.hs
src/Aggregate/: Assignment.hs  Proposal.hs  Reservation.hs  Seat.hs  SeatArrangement.hs
src/Extension/: Data.hs  Refined.hs
test/: Spec.hs
test/Aggregate/: AssignmentSpec.hs  ProposalSpec.hs  ReservationSpec.hs  SeatArrangementSpec.hs  SeatSpec.hs
